correcting contrast

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h1 {
 .card-tooltip {
     position: absolute;
     font-size: 1.8rem;
-    background-color: #ff1ea9;
+    background-color: #d83c9c;
     padding: 10px 30px 50px 10px;
     color: rgb(253, 234, 234);
     font-weight: bold;
